[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3"]
build-backend = "setuptools.build_meta"

[project]
name = "pilea"
authors = [
    {name = "Xi Chen", email = "xinehc@gmail.com"},
]
readme = "README.md"
description = "Pilea: profiling bacterial growth dynamics from metagenomes with sketching"
license = "MIT"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "tqdm",
    "statsmodels",
    "scikit-learn",
    "rich-argparse",
    "threadpoolctl"
]

[project.scripts]
pilea = "pilea.cli:cli"

[tool.setuptools.dynamic]
version = {attr = "pilea.__version__"}

[[tool.setuptools.ext-modules]]
name = "pilea.kmc"
sources = ["src/pilea/kmc.pyx"]
language = "c"

[[tool.setuptools.ext-modules]]
name = "pilea.parse"
sources = ["src/pilea/parse.pyx"]
language = "c"
libraries = ["z"]

[tool.cython]
language_level = "3"
